--- a/helix/config.toml
+++ b/helix/config.toml
@@ -16,7 +16,7 @@ color-modes = true
 cursorline = true
 mouse = false
 bufferline = "multiple"
-number-line = "relative"
+line-number = "relative"
 
 [editor.cursor-shape]
 insert = "bar"
